Thu Jan 25 03:01:19 2001  George Lebl <jirka@5z.com>

	* panel_config.[ch], drawer.c: added the level to all other panel
	  and drawer configurations

Wed Jan 24 00:31:52 2001  George Lebl <jirka@5z.com>

	* global-keys.c: actually make this work, apperently we don't get
	  things out of events now in filters, we must use the raw xevents

Sat Jan 06 18:18:57 2001  George Lebl <jirka@5z.com>

	* extern.c: some cleanups, recycle the exception when fail to
	  add_applet on a booter

	* foobar-widget.c, basep-widget.c:  queue_resize after a realize
	  so that if the WM misplaces us we will replace ourselves back.

Tue Jan 02 20:44:47 2001  George Lebl <jirka@5z.com>

	* extern.c:  Implement launch_an_applet.  It's very simple really,
	  activate the applet, and then if we get an applet with such a
	  goad_id, use the PanelAppletBooter interface to bootstrap it, and
	  leave the rest to whatever wanted the applet in the first place.

	* button-widget.c: fix warning 

Sun Dec 31 19:14:47 2000  George Lebl <jirka@5z.com>

	* panel-widget.[ch], applet.c, extern.c, panel.c:  Allow
	  the drag_start to be started off at a specific drag offset,
	  and pass the current drag offset when going over to another
	  panel.  Also for move from the menu, make the offset the center of
	  the applet.

Sun Dec 31 18:43:24 2000  George Lebl <jirka@5z.com>

	* panel-widget.c:  Use the new movememnt style for both switch and
	  push move.  Instead of waiting until the boundary is crossed, the
	  applet is sortof being held onto on the place you clicked on it.

Sun Dec 31 17:41:21 2000  George Lebl <jirka@5z.com>

	* panel-widget.[ch], extern.c:  minor cleanup, and use initial
	  cursor position for free movement for nicer moving.

Sat Dec 30 23:00:47 2000  George Lebl <jirka@5z.com>

	* panel.c, main.c, panel-util.[ch], menu.c, session.c, drawer.c:
	  Various cleanups, use of string_empty and sure_string, also relayer
	  dialogs after change of default layer and don't put dialogs