@@ -1,3 +1,8 @@
+Thu Jan 25 04:10:03 2001  George Lebl <jirka@5z.com>
+
+	* panel.c: 1st button click on  the panel space also starts a panel
+	  drag
+
 Thu Jan 25 03:01:19 2001  George Lebl <jirka@5z.com>
 
 	* panel_config.[ch], drawer.c: added the level to all other panel
